--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     </properties>
 
     <modules>
-<!--        <module>demo-springboot-rabbitmq</module>-->
+        <module>demo-springboot-rabbitmq</module>
     </modules>
 
     <dependencies>
