--- a/demo-aop/pom.xml
+++ b/demo-aop/pom.xml
@@ -8,21 +8,27 @@
         <version>0.0.1-SNAPSHOT</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-
-    <artifactId>demo-springboot-elasticsearch</artifactId>
+    <artifactId>demo-aop</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>demo-springboot-elasticsearch</name>
-    <description>demo-springboot-elasticsearch</description>
+    <name>demo-aop</name>
+    <description>demo-aop</description>
 
     <properties>
         <java.version>1.8</java.version>
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -31,9 +37,17 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.5.12</version>
+                <version>2.3.6.RELEASE</version>
+                <executions>
+                    <execution>
+                        <id>repackage</id>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
-                    <mainClass>com.zhengl.es.DemoSpringbootElasticsearchApplication</mainClass>
+                    <mainClass>com.zhengl.aop.DemoAopApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
