--- a/demo-springboot-rabbitmq-client/src/main/resources/application.yml
+++ b/demo-springboot-rabbitmq-client/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
-  port: 33000
+  port: 33001
   servlet:
-    context-path: /rabbitmq
+    context-path: /rabbitmq-client
 
 spring:
   rabbitmq:
@@ -10,18 +10,7 @@ spring:
     password: admin
     # 虚拟交换机
     virtual-host: vhost
-    # 可以确保消息成功发送到交换机
-    publisher-confirm-type: correlated
 
-    # 优先级
-    # spring.rabbitmq.template.mandatory > spring.rabbitmq.publisher-returns
-    # spring.rabbitmq.template.mandatory为true、false时，忽略spring.rabbitmq.publisher-returns
-    # spring.rabbitmq.template.mandatory为null（即不配置）时，由spring.rabbitmq.publisher-returns确定
-    # 可以确保消息在未被队列接收时返回，而不是丢弃
-    publisher-returns: true
-#    template:
-      # 消息在没有被队列接收时，是否强行退回还是直接丢弃
-#      mandatory:
     # 如果使用自定义监听器，下面的配置可以注释掉（也可以不用管）
     listener:
       simple:
