--- a/demo-springboot-elastic-job/pom.xml
+++ b/demo-springboot-elastic-job/pom.xml
@@ -42,6 +42,13 @@
         <!--            <groupId>org.apache.shardingsphere.elasticjob</groupId>-->
         <!--            <artifactId>elasticjob-error-handler-email</artifactId>-->
         <!--        </dependency>-->
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 
     <build>
