--- a/demo-springboot-rabbitmq-server/pom.xml
+++ b/demo-springboot-rabbitmq-server/pom.xml
@@ -32,6 +32,12 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
