--- a/demo-springboot-rocketmq/pom.xml
+++ b/demo-springboot-rocketmq/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>rocketmq-spring-boot-starter</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 
     <build>
