--- a/pom.xml
+++ b/pom.xml
@@ -48,21 +48,8 @@
         <module>demo-design-mode</module>
         <module>demo-netty</module>
         <module>demo-messages</module>
+        <module>demo-spring</module>
     </modules>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
 
     <!-- 依赖版本号 -->
     <dependencyManagement>
