--- a/demo-netty/pom.xml
+++ b/demo-netty/pom.xml
@@ -44,6 +44,13 @@
             <artifactId>netty-common</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 
     <build>
