--- a/demo-spring/src/main/resources/db.properties
+++ b/demo-spring/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.10.34:3306/cloudree?useSSL=false
+jdbc.url=jdbc:mysql://192.168.10.34:3306/test?useSSL=false
 jdbc.username=root
 jdbc.password=123456
