--- a/demo-spring/src/main/resources/log4j.properties
+++ b/demo-spring/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=debug
+log4j.rootLogger=debug,console
 #Console
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.Threshold=debug
