--- a/demo-netty/pom.xml
+++ b/demo-netty/pom.xml
@@ -22,6 +22,7 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
         </dependency>
+        <!-- netty 依赖 -->
 
         <dependency>
             <groupId>com.google.code.gson</groupId>
